--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 		<section class="prompt">
 			<h3>todos</h3>
 			<h1>Sign in</h1>
-			<form action="/api/user/login" method="POST">
+			<form action="/api/login" method="POST">
 				<section>
 					<label for="username">Username</label>
 					<input id="username" name="username" type="text" autocomplete="username" required autofocus>
