--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,5 +7,28 @@
 </head>
 <body>
     <h1>Logged In</h1>
+    <p id="data"></p>
 </body>
+<script>
+
+    const data = document.getElementById('data');
+
+    const accessToken = document.cookie.split('; ').find(data => data.startsWith('access_token')).split('=')[1];
+    // 쿠키들은 ; 로 구분되므로 먼저 ; 로 자르고, 그 중 accessToken 으로 시작하는 문자열을 반환한다.
+    
+    const getData = async () => {
+
+        const temp = await fetch('/api/fetch' , {
+            method: 'GET',
+            headers: {
+                authorization: `Bearer ${accessToken}`
+            }
+        })
+
+        const jsonTemp = await temp.json();
+        data.innerHTML = jsonTemp.data;
+    }
+    getData();
+
+</script>
 </html>
