--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,6 @@
 			<p>Authentication powered by <a href="https://www.passportjs.org">Passport</a></p>
 		</footer>
 	</body>
-
 	<script>
 
 		const form = document.getElementById('form');
@@ -51,7 +50,7 @@
 				body: JSON.stringify({ username, password })
 			})
 
-			if (response.status === 200) {// 쿠키에 refresh_uuid 저장
+			if (response.status === 200) {
 				window.location.href = '/';
 			} else {
 				alert('Invalid username or password');
