--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,22 +13,29 @@
 
     const data = document.getElementById('data');
 
-    const accessToken = document.cookie.split('; ').find(data => data.startsWith('accessToken')).split('=')[1];
+    const isAccessToken = document.cookie.split('; ').find(data => data.startsWith('accessToken'));
+    const accessToken = isAccessToken ? isAccessToken.split('=')[1] : undefined;
     // 쿠키들은 ; 로 구분되므로 먼저 ; 로 자르고, 그 중 accessToken 으로 시작하는 문자열을 반환한다.
-    
-    console.log(accessToken)
 
     const getData = async () => {
 
-        const temp = await fetch('/api/fetch' , {
+        const response = await fetch('/api/fetch' , {
             method: 'GET',
             headers: {
                 authorization: `Bearer ${accessToken}`,
             }
         })
 
-        const jsonTemp = await temp.json();
-        data.innerHTML = jsonTemp.data;
+        console.log(response)
+
+        if(response.status === 200){
+            const responseData = await response.json();
+            data.innerHTML = responseData.data;
+        }else if(response.status === 401){
+            alert('로그인이 필요합니다.')
+            window.location.href = '/login';
+        }
+        
     }
     getData();
 
