--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,14 +9,16 @@
     <h1>Logged In</h1>
     <p id="data"></p>
 </body>
-<script>
+<script type="module" src="utils.js"></script>
+<script type="module">
 
+    import jwtToken from './utils.js';
     const data = document.getElementById('data');
 
     const isAccessToken = document.cookie.split('; ').find(data => data.startsWith('accessToken'));
     const accessToken = isAccessToken ? isAccessToken.split('=')[1] : undefined;
+    console.log(jwtToken.getToken())
     // 쿠키들은 ; 로 구분되므로 먼저 ; 로 자르고, 그 중 accessToken 으로 시작하는 문자열을 반환한다.
-
     const getData = async () => {
 
         const response = await fetch('/api/fetch' , {
@@ -26,7 +28,7 @@
             }
         })
 
-        console.log(response)
+        
 
         if(response.status === 200){
             const responseData = await response.json();
